--- a/travis.yml
+++ b/travis.yml
@@ -68,16 +68,16 @@ env:
   #   CONDA_VERSION=2
   # - CONDA_RECIPE=bin/conda/libtoolchain
   #   CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/python-toolchain
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/python-toolchain
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/boost-suite
-    CONDA_VERSION=2
-    TRAVIS_WAIT=50
-  - CONDA_RECIPE=bin/conda/boost-suite
-    CONDA_VERSION=3
-    TRAVIS_WAIT=50
+  # - CONDA_RECIPE=bin/conda/python-toolchain
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/python-toolchain
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/boost-suite
+  #   CONDA_VERSION=2
+  #   TRAVIS_WAIT=50
+  # - CONDA_RECIPE=bin/conda/boost-suite
+  #   CONDA_VERSION=3
+  #   TRAVIS_WAIT=50
   - CONDA_RECIPE=bin/conda/boost-meta
     CONDA_VERSION=2
   - CONDA_RECIPE=bin/conda/boost-meta
