--- a/bin/conda/statiskit/meta.yaml
+++ b/bin/conda/statiskit/meta.yaml
@@ -16,21 +16,21 @@ requirements:
     - devops-tools
     - statiskit-tools
     - libtoolchain-dev
-    - libstatiskit-dev
+    # - libstatiskit-dev
     - libtoolchain
-    - libstatiskit
+    # - libstatiskit
     - python-toolchain
-    - python-statiskit
+    # - python-statiskit
   run:
     - python
     - {{ pin_compatible('devops-tools', exact=True) }}
     - {{ pin_compatible('statiskit-tools', exact=True) }}
     - {{ pin_compatible('libtoolchain-dev', exact=True) }}
-    - {{ pin_compatible('libstatiskit-dev', exact=True) }}
+    # - {{ pin_compatible('libstatiskit-dev', exact=True) }}
     - {{ pin_compatible('libtoolchain', exact=True) }}
-    - {{ pin_compatible('libstatiskit', exact=True) }}
+    # - {{ pin_compatible('libstatiskit', exact=True) }}
     - {{ pin_compatible('python-toolchain', exact=True) }}
-    - {{ pin_compatible('python-statiskit', exact=True) }}
+    # - {{ pin_compatible('python-statiskit', exact=True) }}
     - matplotlib
     - ipython
     - jupyter
