--- a/travis.yml
+++ b/travis.yml
@@ -127,15 +127,15 @@ env:
   #   CONDA_VERSION=2
   # - CONDA_RECIPE=share/git/Core/bin/conda/python-statiskit_core
   #   CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/libstatiskit-dev
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/libstatiskit-dev
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/libstatiskit
-  - CONDA_RECIPE=bin/conda/python-statiskit
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/python-statiskit
-    CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/libstatiskit-dev
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/libstatiskit-dev
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/libstatiskit
+  # - CONDA_RECIPE=bin/conda/python-statiskit
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/python-statiskit
+  #   CONDA_VERSION=3
   - CONDA_RECIPE=bin/conda/statiskit
     CONDA_VERSION=2
   - CONDA_RECIPE=bin/conda/statiskit
