--- a/bin/conda/python-statiskit/meta.yaml
+++ b/bin/conda/python-statiskit/meta.yaml
@@ -16,8 +16,10 @@ requirements:
     - python-statiskit_stl
     - python-statiskit_linalg
     - python-statiskit_core
+    - python-statiskit_glm
   run:
     - python
     - {{ pin_compatible('python-statiskit_stl', exact=True) }}
     - {{ pin_compatible('python-statiskit_linalg', exact=True) }}
     - {{ pin_compatible('python-statiskit_core', exact=True) }}
+    - {{ pin_compatible('python-statiskit_glm', exact=True) }}
