--- a/travis.yml
+++ b/travis.yml
@@ -50,23 +50,23 @@ env:
   # - DOCKER_CONTEXT=bin/docker/linux-64
   #   DOCKER_CONTAINER=linux-64
   #   CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/python-scons
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/python-scons
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/scons-tools
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/scons-tools
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/python-parse
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/python-parse
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/llvm-suite
-  - CONDA_RECIPE=bin/conda/libtoolchain
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/libtoolchain
-    CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/python-scons
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/python-scons
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/scons-tools
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/scons-tools
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/python-parse
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/python-parse
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/llvm-suite
+  # - CONDA_RECIPE=bin/conda/libtoolchain
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/libtoolchain
+  #   CONDA_VERSION=3
   - CONDA_RECIPE=bin/conda/python-toolchain
     CONDA_VERSION=2
   - CONDA_RECIPE=bin/conda/python-toolchain
