--- a/travis.yml
+++ b/travis.yml
@@ -54,10 +54,10 @@ env:
   #   CONDA_VERSION=2
   # - CONDA_RECIPE=bin/conda/python-scons
   #   CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/scons-tools
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/scons-tools
-  #   CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/scons-tools
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/scons-tools
+    CONDA_VERSION=3
   # - CONDA_RECIPE=bin/conda/python-parse
   #   CONDA_VERSION=2
   # - CONDA_RECIPE=bin/conda/python-parse
@@ -104,10 +104,10 @@ env:
   #   CONDA_VERSION=2
   # - CONDA_RECIPE=share/git/devops-tools/bin/conda/devops-tools
   #   CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/statiskit-tools
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/statiskit-tools
-  #   CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/statiskit-tools
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/statiskit-tools
+    CONDA_VERSION=3
   # - CONDA_RECIPE=share/git/STL/bin/conda/libstatiskit_stl-dev
   # - CONDA_RECIPE=share/git/STL/bin/conda/libstatiskit_stl
   # - CONDA_RECIPE=share/git/STL/bin/conda/python-statiskit_stl
