--- a/travis.yml
+++ b/travis.yml
@@ -95,15 +95,15 @@ env:
   # - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
   #   CONDA_VERSION=2
   # - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
-  #   CONDA_VERSION=3
+  #   CONDA_VERSION=3 
   - CONDA_RECIPE=bin/conda/libtoolchain-dev
     CONDA_VERSION=2
   - CONDA_RECIPE=bin/conda/libtoolchain-dev
     CONDA_VERSION=3
-  # - CONDA_RECIPE=share/git/devops-tools/bin/conda/devops-tools
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=share/git/devops-tools/bin/conda/devops-tools
-  #   CONDA_VERSION=3
+  - CONDA_RECIPE=share/git/devops-tools/bin/conda/devops-tools
+    CONDA_VERSION=2
+  - CONDA_RECIPE=share/git/devops-tools/bin/conda/devops-tools
+    CONDA_VERSION=3
   - CONDA_RECIPE=bin/conda/statiskit-tools
     CONDA_VERSION=2
   - CONDA_RECIPE=bin/conda/statiskit-tools
