--- a/travis.yml
+++ b/travis.yml
@@ -44,58 +44,58 @@ env:
   # - DOCKER_CONTEXT=bin/docker/linux-32
   #   DOCKER_CONTAINER=linux-32
   #   CONDA_VERSION=3
-  # - DOCKER_CONTEXT=bin/docker/linux-64
-  #   DOCKER_CONTAINER=linux-64
-  #   CONDA_VERSION=2
-  # - DOCKER_CONTEXT=bin/docker/linux-64
-  #   DOCKER_CONTAINER=linux-64
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/python-scons
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/python-scons
-  #   CONDA_VERSION=3
+  - DOCKER_CONTEXT=bin/docker/linux-64
+    DOCKER_CONTAINER=linux-64
+    CONDA_VERSION=2
+  - DOCKER_CONTEXT=bin/docker/linux-64
+    DOCKER_CONTAINER=linux-64
+    CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/python-scons
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/python-scons
+    CONDA_VERSION=3
   - CONDA_RECIPE=bin/conda/scons-tools
     CONDA_VERSION=2
   - CONDA_RECIPE=bin/conda/scons-tools
     CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/python-parse
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/python-parse
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/llvm-suite
-  # - CONDA_RECIPE=bin/conda/libtoolchain
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/libtoolchain
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/python-toolchain
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/python-toolchain
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/boost-suite
-  #   CONDA_VERSION=2
-  #   TRAVIS_WAIT=50
-  # - CONDA_RECIPE=bin/conda/boost-suite
-  #   CONDA_VERSION=3
-  #   TRAVIS_WAIT=50
-  # - CONDA_RECIPE=bin/conda/boost-meta
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/boost-meta
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/llvm
-  #   TRAVIS_WAIT=45
-  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/clang
-  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/libclanglite
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/libclanglite
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clanglite
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clanglite
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
-  #   CONDA_VERSION=3 
+  - CONDA_RECIPE=bin/conda/python-parse
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/python-parse
+    CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/llvm-suite
+  - CONDA_RECIPE=bin/conda/libtoolchain
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/libtoolchain
+    CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/python-toolchain
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/python-toolchain
+    CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/boost-suite
+    CONDA_VERSION=2
+    TRAVIS_WAIT=50
+  - CONDA_RECIPE=bin/conda/boost-suite
+    CONDA_VERSION=3
+    TRAVIS_WAIT=50
+  - CONDA_RECIPE=bin/conda/boost-meta
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/boost-meta
+    CONDA_VERSION=3
+  - CONDA_RECIPE=share/git/ClangLite/bin/conda/llvm
+    TRAVIS_WAIT=45
+  - CONDA_RECIPE=share/git/ClangLite/bin/conda/clang
+  - CONDA_RECIPE=share/git/ClangLite/bin/conda/libclanglite
+    CONDA_VERSION=2
+  - CONDA_RECIPE=share/git/ClangLite/bin/conda/libclanglite
+    CONDA_VERSION=3
+  - CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clanglite
+    CONDA_VERSION=2
+  - CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clanglite
+    CONDA_VERSION=3
+  - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
+    CONDA_VERSION=2
+  - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
+    CONDA_VERSION=3 
   - CONDA_RECIPE=bin/conda/libtoolchain-dev
     CONDA_VERSION=2
   - CONDA_RECIPE=bin/conda/libtoolchain-dev
@@ -108,24 +108,24 @@ env:
     CONDA_VERSION=2
   - CONDA_RECIPE=bin/conda/statiskit-tools
     CONDA_VERSION=3
-  # - CONDA_RECIPE=share/git/STL/bin/conda/libstatiskit_stl-dev
-  # - CONDA_RECIPE=share/git/STL/bin/conda/libstatiskit_stl
-  # - CONDA_RECIPE=share/git/STL/bin/conda/python-statiskit_stl
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=share/git/STL/bin/conda/python-statiskit_stl
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=share/git/LinAlg/bin/conda/libstatiskit_linalg-dev
-  # - CONDA_RECIPE=share/git/LinAlg/bin/conda/libstatiskit_linalg
-  # - CONDA_RECIPE=share/git/LinAlg/bin/conda/python-statiskit_linalg
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=share/git/LinAlg/bin/conda/python-statiskit_stl
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=share/git/Core/bin/conda/libstatiskit_core-dev
-  # - CONDA_RECIPE=share/git/Core/bin/conda/libstatiskit_core
-  # - CONDA_RECIPE=share/git/Core/bin/conda/python-statiskit_core
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=share/git/Core/bin/conda/python-statiskit_core
-  #   CONDA_VERSION=3
+  - CONDA_RECIPE=share/git/STL/bin/conda/libstatiskit_stl-dev
+  - CONDA_RECIPE=share/git/STL/bin/conda/libstatiskit_stl
+  - CONDA_RECIPE=share/git/STL/bin/conda/python-statiskit_stl
+    CONDA_VERSION=2
+  - CONDA_RECIPE=share/git/STL/bin/conda/python-statiskit_stl
+    CONDA_VERSION=3
+  - CONDA_RECIPE=share/git/LinAlg/bin/conda/libstatiskit_linalg-dev
+  - CONDA_RECIPE=share/git/LinAlg/bin/conda/libstatiskit_linalg
+  - CONDA_RECIPE=share/git/LinAlg/bin/conda/python-statiskit_linalg
+    CONDA_VERSION=2
+  - CONDA_RECIPE=share/git/LinAlg/bin/conda/python-statiskit_stl
+    CONDA_VERSION=3
+  - CONDA_RECIPE=share/git/Core/bin/conda/libstatiskit_core-dev
+  - CONDA_RECIPE=share/git/Core/bin/conda/libstatiskit_core
+  - CONDA_RECIPE=share/git/Core/bin/conda/python-statiskit_core
+    CONDA_VERSION=2
+  - CONDA_RECIPE=share/git/Core/bin/conda/python-statiskit_core
+    CONDA_VERSION=3
   - CONDA_RECIPE=bin/conda/libstatiskit-dev
     CONDA_VERSION=2
   - CONDA_RECIPE=bin/conda/libstatiskit-dev
@@ -141,6 +141,12 @@ env:
   - CONDA_RECIPE=bin/conda/statiskit
     CONDA_VERSION=2
   - CONDA_RECIPE=bin/conda/statiskit
+    CONDA_VERSION=3
+  - DOCKER_CONTEXT=bin/docker/statiskit
+    DOCKER_CONTAINER=statiskit
+    CONDA_VERSION=2
+  - DOCKER_CONTEXT=bin/docker/statiskit
+    DOCKER_CONTAINER=statiskit
     CONDA_VERSION=3
   - ANACONDA_RELEASE=true
 
