--- a/bin/conda/boost-suite/meta.yaml
+++ b/bin/conda/boost-suite/meta.yaml
@@ -55,4 +55,4 @@ outputs:
         - libtoolchain
       run:
         - python
-        - {{ pin_subpackage("libboost", exact=True) }}
+        # - {{ pin_subpackage("libboost", exact=True) }}
