--- a/travis.yml
+++ b/travis.yml
@@ -44,66 +44,66 @@ env:
   # - DOCKER_CONTEXT=bin/docker/linux-32
   #   DOCKER_CONTAINER=linux-32
   #   CONDA_VERSION=3
-  # - DOCKER_CONTEXT=bin/docker/linux-64
-  #   DOCKER_CONTAINER=linux-64
-  #   CONDA_VERSION=2
-  # - DOCKER_CONTEXT=bin/docker/linux-64
-  #   DOCKER_CONTAINER=linux-64
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/python-scons
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/python-scons
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/scons-tools
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/scons-tools
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/python-parse
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/python-parse
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/llvm-suite
-  # - CONDA_RECIPE=bin/conda/libtoolchain
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/libtoolchain
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/python-toolchain
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/python-toolchain
-  #   CONDA_VERSION=3
+  - DOCKER_CONTEXT=bin/docker/linux-64
+    DOCKER_CONTAINER=linux-64
+    CONDA_VERSION=2
+  - DOCKER_CONTEXT=bin/docker/linux-64
+    DOCKER_CONTAINER=linux-64
+    CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/python-scons
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/python-scons
+    CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/scons-tools
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/scons-tools
+    CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/python-parse
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/python-parse
+    CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/llvm-suite
+  - CONDA_RECIPE=bin/conda/libtoolchain
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/libtoolchain
+    CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/python-toolchain
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/python-toolchain
+    CONDA_VERSION=3
   - CONDA_RECIPE=bin/conda/boost-suite
     CONDA_VERSION=2
-    # TRAVIS_WAIT=50
+    TRAVIS_WAIT=50
   - CONDA_RECIPE=bin/conda/boost-suite
     CONDA_VERSION=3
-    # TRAVIS_WAIT=50
-  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/llvm
-  #   TRAVIS_WAIT=45
-  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/clang
-  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/libclanglite
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/libclanglite
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clanglite
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clanglite
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
-  #   CONDA_VERSION=3 
-  # - CONDA_RECIPE=bin/conda/libtoolchain-dev
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/libtoolchain-dev
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=share/git/devops-tools/bin/conda/devops-tools
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=share/git/devops-tools/bin/conda/devops-tools
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/statiskit-tools
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/statiskit-tools
-  #   CONDA_VERSION=3
+    TRAVIS_WAIT=50
+  - CONDA_RECIPE=share/git/ClangLite/bin/conda/llvm
+    TRAVIS_WAIT=45
+  - CONDA_RECIPE=share/git/ClangLite/bin/conda/clang
+  - CONDA_RECIPE=share/git/ClangLite/bin/conda/libclanglite
+    CONDA_VERSION=2
+  - CONDA_RECIPE=share/git/ClangLite/bin/conda/libclanglite
+    CONDA_VERSION=3
+  - CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clanglite
+    CONDA_VERSION=2
+  - CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clanglite
+    CONDA_VERSION=3
+  - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
+    CONDA_VERSION=2
+  - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
+    CONDA_VERSION=3 
+  - CONDA_RECIPE=bin/conda/libtoolchain-dev
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/libtoolchain-dev
+    CONDA_VERSION=3
+  - CONDA_RECIPE=share/git/devops-tools/bin/conda/devops-tools
+    CONDA_VERSION=2
+  - CONDA_RECIPE=share/git/devops-tools/bin/conda/devops-tools
+    CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/statiskit-tools
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/statiskit-tools
+    CONDA_VERSION=3
   # - CONDA_RECIPE=share/git/STL/bin/conda/libstatiskit_stl-dev
   # - CONDA_RECIPE=share/git/STL/bin/conda/libstatiskit_stl
   # - CONDA_RECIPE=share/git/STL/bin/conda/python-statiskit_stl
@@ -144,7 +144,7 @@ env:
   # - DOCKER_CONTEXT=bin/docker/statiskit
   #   DOCKER_CONTAINER=statiskit
   #   CONDA_VERSION=3
-  # - ANACONDA_RELEASE=true
+  - ANACONDA_RELEASE=true
 
 matrix:
   exclude:
