Update Boost recipe for windows

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,60 +34,60 @@ platform:
 
 environment:
   matrix:
-    - CONDA_RECIPE: bin\conda\python-scons
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\python-scons
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\scons-tools
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\scons-tools
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\python-parse
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\python-parse
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\libtoolchain
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\libtoolchain
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\python-toolchain
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\python-toolchain
-      CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\python-scons
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\python-scons
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\scons-tools
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\scons-tools
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\python-parse
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\python-parse
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\libtoolchain
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\libtoolchain
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\python-toolchain
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\python-toolchain
+    #   CONDA_VERSION: 3
     - CONDA_RECIPE: bin\conda\boost-suite
       CONDA_VERSION: 2
     - CONDA_RECIPE: bin\conda\boost-suite
       CONDA_VERSION: 3
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\llvm
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\clang
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\libtoolchain-dev
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\libtoolchain-dev
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: share\git\devops-tools\bin\conda\devops-tools
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: share\git\devops-tools\bin\conda\devops-tools
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\statiskit-tools
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\statiskit-tools
-      CONDA_VERSION: 3
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\llvm
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\clang
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\libtoolchain-dev
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\libtoolchain-dev
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: share\git\devops-tools\bin\conda\devops-tools
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\devops-tools\bin\conda\devops-tools
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\statiskit-tools
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\statiskit-tools
+    #   CONDA_VERSION: 3
     # - CONDA_RECIPE: share\git\STL\bin\conda\libstatiskit_stl-dev
     # - CONDA_RECIPE: share\git\STL\bin\conda\libstatiskit_stl
     # - CONDA_RECIPE: share\git\STL\bin\conda\python-statiskit_stl
