--- a/bin/conda/libtoolchain-dev/meta.yaml
+++ b/bin/conda/libtoolchain-dev/meta.yaml
@@ -39,6 +39,6 @@ requirements:
   run:
     - python
     - libtoolchain
-    - python-autowig
-    - python-clanglite
-    - python-clang                                   [win]
+    - python-autowig                                 [not win]
+    - python-clanglite                               [not win]
+    - python-clang                                   [not win]
