--- a/travis.yml
+++ b/travis.yml
@@ -50,14 +50,14 @@ env:
   - CONDA_RECIPE=bin/conda/python-toolchain
   - CONDA_RECIPE=bin/conda/boost-suite
     TRAVIS_WAIT=15
-  - CONDA_RECIPE=share/git/ClangLite/bin/conda/llvm
-    TRAVIS_WAIT=50
-  - CONDA_RECIPE=share/git/ClangLite/bin/conda/clang
-  - CONDA_RECIPE=share/git/ClangLite/bin/conda/libclanglite
-  - CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clanglite
-  - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
-  - CONDA_RECIPE=bin/conda/libtoolchain-dev
-  - CONDA_RECIPE=share/git/devops-tools/bin/conda/devops-tools
+  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/llvm
+  #   TRAVIS_WAIT=50
+  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/clang
+  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/libclanglite
+  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clanglite
+  # - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
+  # - CONDA_RECIPE=bin/conda/libtoolchain-dev
+  # - CONDA_RECIPE=share/git/devops-tools/bin/conda/devops-tools
   # - CONDA_RECIPE=share/git/STL/bin/conda/libstatiskit_stl-dev
   # - CONDA_RECIPE=share/git/STL/bin/conda/libstatiskit_stl
   # - CONDA_RECIPE=share/git/STL/bin/conda/python-statiskit_stl
