--- a/travis.yml
+++ b/travis.yml
@@ -100,7 +100,11 @@ matrix:
         TRAVIS_WAIT=50
     - os: linux
       env: CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clanglite
-
+    - os: osx
+      env:
+        CONDA_RECIPE=share/git/ClangLite/bin/conda/llvm
+        TRAVIS_WAIT=50
+        
 install:
   - git clone https://github.com/StatisKit/travis-ci.git --depth=1
   - cd travis-ci
