--- a/bin/conda/boost-suite/meta.yaml
+++ b/bin/conda/boost-suite/meta.yaml
@@ -8,7 +8,7 @@ source:
   url: https://dl.bintray.com/boostorg/release/1.68.0/source/boost_1_68_0.tar.bz2
 
 build:
-  number: 0
+  number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
 
 requirements:
   build:
