--- a/bin/conda/glibc/meta.yaml
+++ b/bin/conda/glibc/meta.yaml
@@ -31,7 +31,7 @@ source:
   sha1: b29e1f94b8a32e283e1cb66c9a913950c496fb51
 
 build:
-  number: 0
+  number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
   skip: true [not linux]
 
 requirements:
