--- a/bin/conda/llvm-suite/meta.yaml
+++ b/bin/conda/llvm-suite/meta.yaml
@@ -68,6 +68,9 @@ package:
   name: llvm-suite
   version: {{ version }}
   
+build:
+  number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
+  
 source:
   # - git_url: https://github.com/llvm/llvm
   #   git_tag: master
