--- a/bin/conda/python-toolchain/meta.yaml
+++ b/bin/conda/python-toolchain/meta.yaml
@@ -23,10 +23,10 @@
 
 package:
   name: python-toolchain
-  version: "1.0.0"
+  version: {{ environ.get('GIT_DESCRIBE_TAG', '0.9.0') }}
     
 build:
-  number: 0
+  number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
   run_exports:
     - pywin32                      [win]
     
