--- a/bin/conda/scons-tools/meta.yaml
+++ b/bin/conda/scons-tools/meta.yaml
@@ -23,13 +23,13 @@
 
 package:
   name: scons-tools
-  version: "1.0.0"
+  version: {{ environ.get('GIT_DESCRIBE_TAG', '0.9.0') }}
 
 source:
   path: .
 
 build:
-  number: 0
+  number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
   features:
     - vc12                [win]
   track_features:
