--- a/bin/docker/linux-32/Dockerfile
+++ b/bin/docker/linux-32/Dockerfile
@@ -1,27 +1,30 @@
-ARG CONDA_VERSION=2
+ARG CONDA_VERSION=3
 ARG UBUNTU_VERSION=14.04
-FROM i686/ubuntu:$UBUNTU_VERSION
+ARG USER_LOGIN=admin
+ARG USER_PASSWORD=admin
+ARG CONDA_PREFIX=miniconda
+FROM i686/ubuntu:${UBUNTU_VERSION}
 
 ARG CONDA_VERSION
+ARG USER_LOGIN
+ARG USER_PASSWORD
+ARG CONDA_PREFIX
+
+env CONDA_PREFIX /home/${USER_PASSWORD}/${CONDA_PREFIX}
 
 RUN apt-get update
 RUN apt-get -y upgrade
-RUN apt-get install vim wget curl bzip2 build-essential git -y
+RUN apt-get install vim wget curl bzip2 build-essential git python -y
 RUN apt-get purge 
 RUN apt-get clean
 
-RUN useradd -m main --shell /bin/bash && echo "main:main" | chpasswd && adduser main sudo
-USER main
-WORKDIR /home/main
+RUN useradd -m ${USER_LOGIN} --shell /bin/bash && echo "${USER_LOGIN}:${USER_PASSWORD}" | chpasswd && adduser ${USER_LOGIN} sudo
+USER ${USER_LOGIN}
+WORKDIR /home/${USER_LOGIN}
 
-RUN curl "https://repo.continuum.io/miniconda/Miniconda"$CONDA_VERSION"-latest-Linux-x86.sh" -o miniconda.sh
-RUN chmod a+rwx miniconda.sh
-RUN ./miniconda.sh -b -p /home/main/.miniconda
-RUN rm miniconda.sh
-env PATH /home/main/.miniconda:/home/main/.miniconda/bin:$PATH
-COPY --chown=main .condarc /home/main/.condarc
-RUN conda install conda=4.3.30 conda-build=3.0.30 anaconda-client=1.6.5 git -y
-RUN echo "source activate" >> .bashrc
+RUN git clone https://github.com/StatisKit/travis-ci.git travis-ci --depth=1
+RUN cd travis-ci && export CONDA_PREFIX=${CONDA_PREFIX} && bash install.sh 
+RUN echo "source ${CONDA_PREFIX}/etc/profile.d/conda.sh" >> .bashrc
 
-RUN git clone --recursive https://github.com/StatisKit/StatisKit
+env CONDA_ACTIVATE source ${CONDA_PREFIX}/etc/profile.d/conda.sh
 env ARCH x86
