--- a/bin/docker/linux-64/Dockerfile
+++ b/bin/docker/linux-64/Dockerfile
@@ -10,9 +10,11 @@ ARG USER_LOGIN
 ARG USER_PASSWORD
 ARG CONDA_PREFIX
 
+ENV PATH ${CONDA_PREFIX}/bin:${PATH}
+
 RUN apt-get update
 RUN apt-get -y upgrade
-RUN apt-get install vim wget curl bzip2 git python python-six -y
+RUN apt-get install vim wget curl bzip2 git python -y
 RUN apt-get purge 
 RUN apt-get clean
 
