--- a/travis.yml
+++ b/travis.yml
@@ -49,7 +49,7 @@ env:
   - CONDA_RECIPE=bin/conda/libtoolchain
   - CONDA_RECIPE=bin/conda/python-toolchain
   - CONDA_RECIPE=bin/conda/boost-suite
-    TRAVIS_WAIT=25
+  #  TRAVIS_WAIT=25
   # - CONDA_RECIPE=share/git/ClangLite/bin/conda/llvm
   #   TRAVIS_WAIT=50
   # - CONDA_RECIPE=share/git/ClangLite/bin/conda/clang
